Fix Navbar on mobile

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,8 @@
     <script>#}
         {#Turbolinks.start()# }
         {#</script>#}
+
+        <script src="/js/navbar.js"></script>
     {% endblock %}
 
     {% block scripts %}
