--- a/templates/baseAdmin.html
+++ b/templates/baseAdmin.html
@@ -20,6 +20,8 @@
         {#        <script>#}
         {#            Turbolinks.start()#}
         {#        </script>#}
+
+        <script src="/js/navbar.js"></script>
     {% endblock %}
 
     {% block scripts %}
