--- a/templates/baseTour.html
+++ b/templates/baseTour.html
@@ -23,6 +23,8 @@
         {#        <script>#}
         {#// Turbolinks.start()#}
         {#        </script>#}
+
+        <script src="/js/navbar.js"></script>
     {% endblock %}
 
     {% block scripts %}
