--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -22,7 +22,7 @@
         <div class="container" id="main">
             <div id="login">
                 <h1 class="title">Login to your Tourisit ID</h1>
-                <h3 class="subtitle">Welcome back!</h3>
+                <h3 class="subtitle">Welcome back</h3>
                 <div id="emailConfirmed" class="notification is-success" style="display: none;">
                     Your email has been verified.
                 </div>
@@ -71,7 +71,7 @@
             </div>
 
             <div id="emailConfirmation" style="display: none;">
-                <h2 class="title is-3">Almost done!</h2>
+                <h2 class="title is-3">Almost done</h2>
                 <p id="loginSuccessText" class="subtitle is-6">Please verify your email</p>
                 <div id="tooFastEmail" class="notification is-danger" style="display: none;">
                     Resending emails too quickly.
