--- a/templates/customer/booking.html
+++ b/templates/customer/booking.html
@@ -88,13 +88,13 @@
     <div class="container">
         {% if process_step == 6 %}
             <div class="has-text-centered m-2 is-size-6">
-                You are now ready to go for your Tour!
+                You are now ready to go for your Tour
             </div>
         {% endif %}
 
         {% if process_step >= 7 %}
             <div class="has-text-centered m-2 is-size-4">
-                You have completed your Tour!
+                You have completed your Tour
             </div>
         {% endif %}
         <!--START: Steps-->
