--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -24,7 +24,7 @@
                         <hr>
                         <h3 class="title is-4">Pricing</h3>
                         <p class="has-text-weight-light is-size-2 has-text-dark"><small class="is-size-5">From</small>
-                            ${{ item.tour_price }}
+                            ${{ item.tour_price }}0
                         </p>
                     </div>
 
