--- a/templates/tourGuides/editListing.html
+++ b/templates/tourGuides/editListing.html
@@ -486,7 +486,7 @@
             $('#currentImg').attr('src', 'data:image/jpeg;base64,' + persistedTourImg)
         {% endif %}
 
-        console.log('Done!')
+        console.log('Done')
 
 
         var picture = null
