--- a/templates/tourGuides/editing-success.html
+++ b/templates/tourGuides/editing-success.html
@@ -9,7 +9,7 @@
     <section class="section mt-5">
         <div class="container">
             <div class='content has-text-centered'>
-                <h1>Edit was Successful!</h1>
+                <h1>Edit was Successful</h1>
                 <br>
                 <a class='button is-light' href="/discover/{{ id }}">
                     View Edited Listing
