--- a/templates/tourGuides/ownlisting.html
+++ b/templates/tourGuides/ownlisting.html
@@ -34,7 +34,7 @@
                                         <p class="subtitle">{{ item.tour_desc }}</p>
                                         <p class="has-text-weight-light is-size-2 has-text-dark"><small
                                                 class="is-size-5">From</small>
-                                            ${{ item.tour_price }}
+                                            ${{ item.tour_price }}.0
                                         </p>
                                         <br>
                                     </div>
