--- a/templates/tourGuides/listing-success.html
+++ b/templates/tourGuides/listing-success.html
@@ -9,7 +9,7 @@
     <section class="section mt-5">
         <div class="container">
             <div class='content has-text-centered'>
-                <h1>Listing was Successful!</h1>
+                <h1>Listing was Successful</h1>
                 <br>
                 <a class='button is-light' href="{{ url_for('ownlisting') }}">
                     View Listings
