--- a/templates/helpdesk.html
+++ b/templates/helpdesk.html
@@ -13,7 +13,7 @@
     </section>
 
     <div class="box" style="width: 50%; margin-left: 25%">
-        <form class="form-horizontal" action="/support" method="POST" onsubmit="$('#SuccessModal').fadeIn('fast'); return false;">
+        <form class="form-horizontal" action="/support" method="POST">
             {{ form.csrf_token }}
             <fieldset>
                 <div class="field">
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="field">
-                    <label class="label">Message</label>
+                    <label class="label">Message <label class="has-text-danger">*</label></label>
                     <div class="control">
                         {{ form.content(id="content", type="textarea", class="input", rows="5", style="height: 150px;") }}
                         <ul>
@@ -50,8 +50,8 @@
                 </div>
                 <div class="field has-text-centered mt-6">
                     <div class="control">
-                        <input type='submit' value='Submit' id="support-submit" name="support-submit"
-                               class="button is-success is-medium" style="width:20%;" onclick="preventDefault();">
+                        <input type='submit' value='Submit' id="supportbtn" name="supportbtn"
+                               class="button is-success is-medium" style="width:20%;">
                     </div>
                 </div>
             </fieldset>
@@ -62,7 +62,7 @@
         <div class="modal-background"></div>
         <div class="modal-card box" style="padding: 3em;">
             <i class="far fa-check-circle fa-6x has-text-centered" style="color: limegreen;"></i>
-            <p class="title is-3 has-text-weight-bold has-text-centered">Successfully submitted!</p>
+            <p class="title is-3 has-text-weight-semibold has-text-centered">Successfully submitted</p>
             <p class="subtitle has-text-centered">We will get in touch with you via email</p>
             <a href="{{ url_for('home') }}" class="button is-success is-fullwidth">
                 <i class="fas fa-home"></i>&ensp;Return to Homepage</a>
@@ -70,6 +70,15 @@
     </div>
 
     <script>
+        document.getElementById("support-submit").disabled = true;
+        var somethingChanged = false;
+        $(document).ready(function () {
+            $('#content').change(function () {
+                somethingChanged = true;
+                $('#support-submit').prop("disabled", false);
+            });
+        });
+
         var pfplink = sessionStorage.getItem("pfpLink");
         {# Print to tour guide profile link #}
         document.getElementById('link').value = pfplink;
