--- a/templates/success-support.html
+++ b/templates/success-support.html
@@ -6,14 +6,14 @@
 
 
 {% block content %}
-    <section class="section mt-5">
+    <section class="section" style="margin-top: 5%;">
         <div class="container">
-            <div class='content has-text-centered'>
-                <h1>Successfully Submitted Form!</h1>
-                <br>
-                <a class='button is-light' href="/">
-                    Return to Home
-                </a>
+            <div class="box has-text-centered" style="width: 60%; margin-left:20%; height:300px;">
+                <i class="far fa-check-circle fa-6x mb-4" style="color: limegreen;"></i>
+                <p class="title is-3 has-text-weight-semibold has-text-centered">Successfully Submitted</p>
+                <p class="subtitle has-text-centered mb-6">We will get in touch with you soon</p>
+                <a href="/me/settings" class="button is-success is-fullwidth">
+                    <i class="fas fa-home"></i>&ensp;Return to Home</a>
             </div>
         </div>
     </section>
